Move compile task from plugin to omega